--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,19 +8,39 @@ dataSources:
     source:
       address: "0x6360CCc578027DF64b9FcC90709D365E684dC676"
       abi: PoolFactory
+      startBlock: 13646770
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - OwnershipTransferred
         - PoolCreation
       abis:
         - name: PoolFactory
           file: ./abis/PoolFactory.json
       eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
         - event: PoolCreation(indexed uint256,indexed address,indexed address,uint256,uint256,uint256,uint256,uint256)
           handler: handlePoolCreation
-      file: ./src/mapping.ts
+      file: ./src/mappings/factory.ts
+templates:
+  - kind: ethereum/contract
+    name: MetaversepadTemplate
+    network: bsc
+    source:
+      abi: Metaversepad
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - MetaversepadPool
+      abis:
+        - name: Metaversepad
+          file: ./abis/Metaversepad.json
+        - name: PoolFactory
+          file: ./abis/PoolFactory.json
+      eventHandlers:
+        - event: FundPool(indexed uint256,indexed address,uint256)
+          handler: handleFundPool
+      file: ./src/mappings/pool.ts
+
